test/conformance/chainsaw/verifyImages/clusterpolicy/standard/notary-image-verification-secret-from-policy/chainsaw-step-02-apply-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: secret-in-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
