test/conformance/chainsaw/verifyImages/clusterpolicy/standard/notary-image-verification-secret-from-policy/chainsaw-step-05-apply-1.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: kyverno
